https://github.com/GDI-HE/dashboard/issues/16 z-index removed. It was on the top when I opened the mapviewer iframe

--- a/dashboard/static/css/check_abstracts.css
+++ b/dashboard/static/css/check_abstracts.css
@@ -665,5 +665,4 @@ table tr:hover {
 .sticky-header th {
     position: sticky;      /* Enables sticky positioning */
     top: 0;                /* Sticks to the top of the scroll container */
-    z-index: 2;            /* Ensures it stays above other content */
 }
